--- a/HollywoodStyleHacking.css
+++ b/HollywoodStyleHacking.css
@@ -1,26 +1,101 @@
-#footer {
-	background-color:black;
-	color:white;
-	text-align:center;
+*,
+*:before,
+*:after {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
-#head1 {
-	background-color:black;
-	color:white;
-	text-align:center;
-}
-#table1 {
-	font-size: 20px;
-}
+
 body {
 	background-color: #500;
-	color:black;
+	color: #000;
 }
+
 a {
-	color:green;
+	color: #888;
 }
 a:visited {
-	color:gray;
+	color: #888;
 }
 a:hover {
-	color: pink;
+	color: #F99;
 }
+
+nav {
+	display: inline-block;
+	width: 200px;
+	margin: 0px;
+}
+
+nav a {
+	text-decoration: none;
+	display: block;
+}
+
+nav .active {
+	text-decoration: underline;
+}
+
+table {
+	font-weight: bold;
+	width: 100%;
+}
+
+td {
+	text-align: center;
+}
+
+main {
+	display: inline-block;
+	vertical-align: top;
+	width: 685px;
+	margin: 0px;
+	padding-bottom: 20px;
+}
+
+footer {
+	background-color: #000;
+	color: #FFF;
+	text-align: center;
+}
+
+#head1 {
+	background-color: #000;
+	color: #FFF;
+	text-align: center;
+}
+
+#frontpage {
+	display: block;
+}
+
+#contactlist {
+	display: inline-block;
+	width: 150px;
+	margin: 0px 8px;
+}
+
+#image {
+	height: 150px;
+	width: 175px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#tb2 {
+	text-align: left;
+	font-weight: normal;
+}
+
+#wrapper {
+	width: 940px;
+	margin: 0px auto;
+}
+
+@media screen and (max-width: 600px) {
+	a {
+		font-size: 150%;
+}
+	body {
+	}
